--- a/Projekt2/Levi2.html
+++ b/Projekt2/Levi2.html
@@ -54,7 +54,7 @@
               <div><p id="pido">május.26</p></div><div><p id="pido">julius.6</p></div><div><p id="pido">Agusztus.2</p></div>
               <br>
               <br>
-              <button>104.000 Ft/főtől</button>
+              <button><a href="fizet.html">104.000 Ft/főtől</a></button>
             </div>
 
 
