--- a/Projekt2/Mark1.html
+++ b/Projekt2/Mark1.html
@@ -105,10 +105,11 @@
         </div>
       </div>
     </div>
-    <div class="row text-center">
-      <h1>Buszjáratok</h1>
-    </div>
     <div>
+      <h1 id="mszöveg"> <u> Buszjáratok</u> </h1>
+    </div>
+    <div class="row">
+      <div class="col-6">
       <ul id="margin2"  >
         <li>Budapest, Újpest-Városkapu XIII. ker.  	04:50	05:20	05:50	06:20	06:50	06:55	07:20</li>
         <li> Budapest, Károlyi István u.	04:52	05:22	05:52	06:22	06:52	06:57	07:22</li>
@@ -119,6 +120,7 @@
         <li> Budapest, Bagaria u.	04:57	05:27	05:59	06:29	06:59	07:04	07:29</li>
         <li> Budapest, Vízművek	04:59	05:29	06:01	06:31	07:01	S	07:31</li>
         <li> Budapest, Székesdűlő	05:01	05:31	06:03	06:34	07:04	S	07:34</li>
+        <br>
         <h3> <u> Budapest-bérlet szakaszhatár </u> </h3>	 	 	 	 	 	 	 
         <li>Dunakeszi, Székesdűlő ipartelep	05:02	05:32	06:04	06:36	07:06	S	07:36</li>
         <li>Dunakeszi, Vízművek bej. út	05:04	05:34	06:05	06:37	07:07	S	07:37</li>
@@ -130,9 +132,11 @@
          <li>Dunakeszi, sportpálya	05:11	05:41	06:13	06:46	07:16	07:26	07:46</li>
       </ul>
     </div>
-    <div class="text-center">
-      <img src="térkép.jpg" alt="">
+    <div class="col-6">
+      <img id="mkép2" src="buszjaratok.jpg" alt="">
     </div>
+  </div>
+   
   </div>
 
 </body>
