--- a/Projekt2/Mark2.html
+++ b/Projekt2/Mark2.html
@@ -43,8 +43,10 @@
         </div>
       </div>
     </nav>
-          <div>
+          <div class="row">
+            <div class="col-6">
 
+            </div>
           </div>
 
   </div>
