--- a/Projekt2/Mark2.html
+++ b/Projekt2/Mark2.html
@@ -43,12 +43,42 @@
         </div>
       </div>
     </nav>
-          <div class="row">
-            <div class="col-6">
+    <div class="row">
+      <div class="col-3">
+        <h2> <u>Lánchíd</u> </h2>
+        <p>A következő közlekedési vonalaknak van olyan szakasza, ami közel van a Lánchídhoz</p>
+        <ul>
+          <li>105</li>
+          <li>133E</li>
+          <li>15</li>
+          <li>216</li>
+          <li>5</li>
+          <li>9</li>
+          <li>M3</li>
 
-            </div>
-          </div>
-
+        </ul>
+      </div>
+      <div class="col-9">
+        <img id="lanchid" src="lanchid.jpg" alt="">
+      </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+          <h2> <u>Hősök tere</u> </h2>
+          <p>>A következő közlekedési vonalaknak van olyan szakasza, ami közel van a Hősök teréhez</p>
+          <ul>
+            <li>134</li>
+            <li>160</li>
+            <li>204</li>
+            <li>243</li>
+            <li>34</li>
+          </ul>
+        </div>
+        <div class="col-9">
+          <img src="hosoktere.jpg" alt="">
+        </div>
+    </div>
+    
   </div>
 
 </body>
