--- a/Projekt2/Mark2.html
+++ b/Projekt2/Mark2.html
@@ -44,7 +44,7 @@
       </div>
     </nav>
     <div class="row">
-      <div class="col-3">
+      <div class="col-6">
         <h2> <u>Lánchíd</u> </h2>
         <p>A következő közlekedési vonalaknak van olyan szakasza, ami közel van a Lánchídhoz</p>
         <ul>
@@ -58,14 +58,14 @@
 
         </ul>
       </div>
-      <div class="col-9">
-        <img id="lanchid" src="lanchid.jpg" alt="">
+      <div class="col-6">
+        <img id="nevezetessegek" src="lanchid.jpg" alt="">
       </div>
     </div>
     <div class="row">
         <div class="col-3">
           <h2> <u>Hősök tere</u> </h2>
-          <p>>A következő közlekedési vonalaknak van olyan szakasza, ami közel van a Hősök teréhez</p>
+          <p>A következő közlekedési vonalaknak van olyan szakasza, ami közel van a Hősök teréhez</p>
           <ul>
             <li>134</li>
             <li>160</li>
@@ -75,10 +75,58 @@
           </ul>
         </div>
         <div class="col-9">
-          <img src="hosoktere.jpg" alt="">
+          <img id="nevezetessegek" src="hosoktere.jpg" alt="">
         </div>
     </div>
-    
+    <div class="row">
+      <div class="col-6">
+        <h2> <u>Halászbástya</u> </h2>
+        <p>A következő közlekedési vonalaknak van olyan szakasza, ami közel van a Halászbástyához</p>
+        <ul>
+          <li>109</li>
+          <li>16</li>
+          <li>216</li>
+          <li>19</li>
+          <li>41</li>
+        </ul>
+      </div>
+      <div class="col-6">
+        <img id="nevezetessegek" src="bastya.jpg" alt="">
+      </div>
+  </div>
+
+  <div class="row">
+    <div class="col-3">
+      <h2> <u>Citadella</u> </h2>
+      <p>A következő közlekedési vonalaknak van olyan szakasza, ami közel van a Citadellához</p>
+      <ul>
+        <li>27</li>
+      </ul>
+    </div>
+    <div class="col-9">
+      <img id="nevezetessegek" src="citadella.jpg" alt="">
+    </div>
+</div>
+<div class="row">
+  <div class="col-6">
+    <h2> <u>Országház</u> </h2>
+    <p>A következő közlekedési vonalaknak van olyan szakasza, ami közel van az Országházhoz</p>
+    <ul>
+      <li>115</li>
+      <li>15</li>
+      <li>70</li>
+      <li>9</li>
+      <li>M2</li>
+      <li>2</li>
+      <li>2B</li>
+      <li>2M</li>
+    </ul>
+  </div>
+  <div class="col-6">
+    <img id="nevezetessegek" src="orszaghaz.jpg" alt="">
+  </div>
+</div>
+
   </div>
 
 </body>
