--- a/Projekt2/Mark2.html
+++ b/Projekt2/Mark2.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div id="cont" class="container">
     <h1 class="text-center">Látnivalók</h1>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="container-fluid">
