--- a/Projekt2/Levi2.html
+++ b/Projekt2/Levi2.html
@@ -51,7 +51,7 @@
             <div class="col-6"><h1>Bajor kastélyok</h1><p>AUSZTRIA, NÉMETORSZÁG, SALZBURGERLAND, TIROL, FELSŐ-AUSZTRIA, CHIEMSEE, LINDERHOF, BERCHTESGADEN (GE), HOHENSCHWANGAU, SALZBURG, INNSBRUCK, GMUNDEN</p><h4>4 napos buszos utazás Bajorországba
               Hossz: 4 nap / 3 éj</h4>
               <br>
-              <div><p id="pido">május.26</p></div><div><p id="pido">julius.6</p></div><div><p id="pido">Agusztus.2</p></div>
+              <div><p id="pido">május.6____május.12____május.18____május.26</p></div><div><p id="pido">julius.1____julius.6____julius.14____julius.23</p></div><div><p id="pido">Agusztus.2____Agusztus.9____Agusztus.17____Agusztus.25</p></div>
               <br>
               <br>
               <button><a href="fizet.html">104.000 Ft/főtől</a></button>
