--- a/Projekt2/fizet.html
+++ b/Projekt2/fizet.html
@@ -45,12 +45,14 @@
           <div class="row">
             <img src="bkvsáv.png" alt="">
           </div>
+          <div class="row">
+            <br>
+    <h1>Fizetési mód</h1>
+    <div class="row"><img id="imglevi" src="letöltés.png" alt=""><img id="imglevi" src="letöltésotp.png" alt=""><img id="imglevi" src="letöltés visa.png" alt=""><img id="imglevi" src="letöltésmaster.png" alt=""></div>
+          </div>
   
       
     </div>
-    <br>
-    <h1>Fizetési mód</h1>
-    <div class="row"><img src="letöltés.png" alt=""><img src="letöltésotp.png" alt=""><img src="letöltés visa.png" alt=""><img src="" alt=""></div>
     
 </body>
 </html>
