--- a/Projekt2_kesz/Projekt2 (4)/Projekt2/81-717.2K, 81-714.2K.html
+++ b/Projekt2_kesz/Projekt2 (4)/Projekt2/81-717.2K, 81-714.2K.html
@@ -26,19 +26,19 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="Mark.html">Buszok</a>
+              <a class="nav-link" href="Mark1.html">Buszok</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Gyuri.html">Villamos</a>
+              <a class="nav-link" href="Gyuri.html">Metró</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Levi.html">Repülők</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Levi2.html">Levi2</a>
+              <a class="nav-link" href="Levi2.html">Utazás</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Mark1.html">Mark2</a>
+              <a class="nav-link" href="Mark2.html">Látnivalók</a>
             </li>
           </ul>
         </div>
@@ -59,7 +59,7 @@
     <br>
     <div class="row text-center">
       <div class="col-2"></div>
-     <div class="col-8">  <p> <img id="altsom" src="metro3.png" alt=""></p> </div> 
+     <div class="col-8">  <p> <img id="altsom" src="metro2.jpg" alt=""></p> </div> 
       <div class="col-2"></div>
     </div>
     <div id="metabla" class="row">
@@ -73,25 +73,25 @@
          </thead>
          <tbody>
           <tr>
-            <td>2014 évi db szám</td> <td>28</td> <td>18</td> 
+            <td>2014 évi db szám</td> <td>12</td> <td>13</td> 
           </tr>
           <tr>
             <td>Szerelvényhossz</td> <td>100 m</td> <td>80 m</td> 
           </tr>
           <tr>
-            <td>Szélesség</td> <td>2 780 mm</td> <td>2 780 mm</td> 
+            <td>Szélesség</td> <td>2 780 mm</td> <td>2 643 mm</td> 
           </tr>
           <tr>
-            <td>Magasság</td> <td>3 696 mm</td> <td>3 696 mm</td> 
+            <td>Magasság</td> <td>3 696 mm</td> <td>3 612 mm</td> 
           </tr>
           <tr>
             <td>Felszállósávok száma</td> <td>40</td> <td>32</td> 
           </tr>
           <tr>
-            <td>Összes férőhely</td> <td>1323 fő/szerelvény</td> <td>777 fő/szerelvény</td> 
+            <td>Összes férőhely</td> <td>923 fő/szerelvény</td> <td>701 fő/szerelvény</td> 
           </tr>
           <tr>
-            <td>Ülőhelyek száma</td> <td>109 fő/szerelvény</td> <td>266 fő/szerelvény</td> 
+            <td>Ülőhelyek száma</td> <td>519 fő/szerelvény</td> <td>153 fő/szerelvény</td> 
           </tr>
          </tbody>
      </table>
