--- a/Projekt2_kesz/Projekt2 (4)/Projekt2/Levi.html
+++ b/Projekt2_kesz/Projekt2 (4)/Projekt2/Levi.html
@@ -9,9 +9,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="fluid">
     <div id="cont" class="container">
-    <h1 class="text-center"> Tömegközlekedés </h1>   
+    <h1 class="text-center">Tömegközlekedés</h1>   
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html"><img src="logo_bkv.jpg" alt="" style="width:40px;" class="rounded-pill"> </a>
@@ -21,7 +21,7 @@
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="Mark2.html">Márk2</a>
+                    <a class="nav-link" href="Mark1.html">Buszok</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="Gyuri.html">Metró</a>
@@ -30,10 +30,10 @@
                     <a class="nav-link" href="Levi.html">Repülés</a>
                   </li>  
                   <li class="nav-item">
-                    <a class="nav-link" href="Levi2.html">Levi2</a>
+                    <a class="nav-link" href="Levi2.html">Utazás</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Mark1.html">Mar1</a>
+                    <a class="nav-link" href="Mark2.html">Látnivalók</a>
                   </li>          
                 </ul>
               </div>
