--- a/Projekt2_kesz/Projekt2 (4)/Projekt2/Nemet.html
+++ b/Projekt2_kesz/Projekt2 (4)/Projekt2/Nemet.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="fluid">
     <div id="cont" class="container">
     <h1 class="text-center"> Tömegközlekedés </h1>   
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -21,19 +21,19 @@
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Mark</a>
+                    <a class="nav-link" href="Mark1.html">Buszok</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Gyuri.html">Gyuri</a>
+                    <a class="nav-link" href="Gyuri.html">Metró</a>
                   </li>
                  <li class="nav-item">
                     <a class="nav-link" href="Levi.html">Repülés</a>
                   </li>  
                   <li class="nav-item">
-                    <a class="nav-link" href="Levi2.html">Levi2</a>
+                    <a class="nav-link" href="Levi2.html">Utazás</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Mark1.html">Mark2</a>
+                    <a class="nav-link" href="Mark2.html">Látnivalók</a>
                   </li>          
                 </ul>
               </div>
@@ -64,35 +64,35 @@
               </tbody>
             </table>
           <div class="row">
-            <h2>Franciaországi menetrendek</h2>
+            <h2>Németországi menetrendek</h2>
             <div class="col-6">
             <ul id="ul">
-                <li>12:35	Paris	Lufthansa	LH1676	2B	Várható 12:43	</li>
-                <li>12:35	Paris	Air Canada	AC9032	2B	Várható 12:43</li>	
-                <li>12:35	Paris	TAP Portugal	TP7980	2B	Várható 12:43</li>	
-                <li>12:35	Paris	United Airlines	UA9038	2B	Várható 12:43</li>	
-                <li>16:10	Paris	Lufthansa	LH1678	2B	Várható	</li>
-                <li>16:10	Paris	TAP Portugal	TP7970	2B	Várható	</li>
-                <li>16:10	Paris	United Airlines	UA8857	2B	Várható	</li>
-                <li>23:25	Paris	Lufthansa	LH1682	2B	Várható	</li>
-                <li>23:25	Paris	TAP Portugal	TP7972	2B	Várható	</li>
-                <li>23:25	Paris	United Airlines	UA9053	2B	Várható	</li>
-                <li>23:25	Paris	SAS	SK3137	2B	Várható</li>
+                <li>12:35	Munich	Lufthansa	LH1676	2B	Várható 12:43	</li>
+                <li>12:35	Munich	Air Canada	AC9032	2B	Várható 12:43</li>	
+                <li>12:35	Munich	TAP Portugal	TP7980	2B	Várható 12:43</li>	
+                <li>12:35	Munich	United Airlines	UA9038	2B	Várható 12:43</li>	
+                <li>16:10	Munich	Lufthansa	LH1678	2B	Várható	</li>
+                <li>16:10	Munich	TAP Portugal	TP7970	2B	Várható	</li>
+                <li>16:10	Munich	United Airlines	UA8857	2B	Várható	</li>
+                <li>23:25	Munich	Lufthansa	LH1682	2B	Várható	</li>
+                <li>23:25	Munich	TAP Portugal	TP7972	2B	Várható	</li>
+                <li>23:25	Munich	United Airlines	UA9053	2B	Várható	</li>
+                <li>23:25	Munich	SAS	SK3137	2B	Várható</li>
             </ul>
           </div>
           <div class="col-6">
             <ul id="ul">
-                <li>12:35	Paris	Lufthansa	LH1676	2B	Várható 12:43	</li>
-                <li>12:35	Paris	Air Canada	AC9032	2B	Várható 12:43</li>	
-                <li>12:35	Paris	TAP Portugal	TP7980	2B	Várható 12:43</li>	
-                <li>12:35	Paris	United Airlines	UA9038	2B	Várható 12:43</li>	
-                <li>16:10	Paris	Lufthansa	LH1678	2B	Várható	</li>
-                <li>16:10	Paris	TAP Portugal	TP7970	2B	Várható	</li>
-                <li>16:10	Paris	United Airlines	UA8857	2B	Várható	</li>
-                <li>23:25	Paris	Lufthansa	LH1682	2B	Várható	</li>
-                <li>23:25	Paris	TAP Portugal	TP7972	2B	Várható	</li>
-                <li>23:25	Paris	United Airlines	UA9053	2B	Várható	</li>
-                <li>23:25	Paris	SAS	SK3137	2B	Várható</li>
+                <li>12:35	Munich	Lufthansa	LH1676	2B	Várható 12:43	</li>
+                <li>12:35	Munich	Air Canada	AC9032	2B	Várható 12:43</li>	
+                <li>12:35	Munich	TAP Portugal	TP7980	2B	Várható 12:43</li>	
+                <li>12:35	Munich	United Airlines	UA9038	2B	Várható 12:43</li>	
+                <li>16:10	Munich	Lufthansa	LH1678	2B	Várható	</li>
+                <li>16:10	Munich	TAP Portugal	TP7970	2B	Várható	</li>
+                <li>16:10	Munich	United Airlines	UA8857	2B	Várható	</li>
+                <li>23:25	Munich	Lufthansa	LH1682	2B	Várható	</li>
+                <li>23:25	Munich	TAP Portugal	TP7972	2B	Várható	</li>
+                <li>23:25	Munich	United Airlines	UA9053	2B	Várható	</li>
+                <li>23:25	Munich	SAS	SK3137	2B	Várható</li>
             </ul>
           </div>
 
