--- a/Projekt2_kesz/Projekt2 (4)/Projekt2/Mark2.html
+++ b/Projekt2_kesz/Projekt2 (4)/Projekt2/Mark2.html
@@ -25,19 +25,19 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="Mark.html">Márk</a>
+              <a class="nav-link" href="Mark1.html">Buszok</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Gyuri.html">Gyuri</a>
+              <a class="nav-link" href="Gyuri.html">Metró</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Levi.html">Levi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Levi2.html">Levi2</a>
+              <a class="nav-link" href="Levi2.html">Utazás</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Mark1.html">Mark2</a>
+              <a class="nav-link" href="Mark2.html">Látnivalók</a>
             </li>
           </ul>
         </div>
