--- a/Projekt3/Mark4.html
+++ b/Projekt3/Mark4.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="Css/styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,13 +21,13 @@
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Kézilabda történelme</a>
+                    <a class="nav-link" href="Mark.html">Metalica</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Gyuri.html">Játék szabályok</a>
+                    <a class="nav-link" href="Levi.html">KISS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Gyuri2.html">Alapszabályok</a>
+                    <a class="nav-link" href="Gyuri.html">AC/DC</a>
                   </li>           
                 </ul>
               </div>
