--- a/Projekt3/Levi.html
+++ b/Projekt3/Levi.html
@@ -6,19 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<<<<<<< HEAD:Projekt3/Linkek/Levi.html
-    <title>Levi</title>
-=======
     <link rel="stylesheet" href="Css/styles.css">
     <title>Document</title>
->>>>>>> 3039bcc253a4abfbc3f437a349fd7d53936884e7:Projekt3/Levi.html
 </head>
 <body>
     <div class="container">
         <p class="text-center">Vízszíntes navigátor bár</p>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img src="kezilabda_2.jpg" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
+              <a class="navbar-brand" href="index.html"><img src="Képek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
               </button>
