--- a/Projekt3/Levi.html
+++ b/Projekt3/Levi.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <p class="text-center">Vízszíntes navigátor bár</p>
+        <p class="text-center">Bandák</p>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html"><img src="Képek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
