--- a/Projekt3/Gyuri2.html
+++ b/Projekt3/Gyuri2.html
@@ -13,7 +13,7 @@
     <div class="container">
         <p class="text-center">Bandák</p>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <div class="container-fluid">
+            <div class="container">
               <a class="navbar-brand" href="index.html"><img src="Képek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
