--- a/Projekt3/Levi4.html
+++ b/Projekt3/Levi4.html
@@ -21,7 +21,7 @@
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item">s
-                    <a class="nav-link" href="Mark.html">Metalica</a>
+                    <a class="nav-link" href="Mark.html">Metallica</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="Levi.html">KISS</a>
