--- a/Projekt3/Levi4.html
+++ b/Projekt3/Levi4.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     <div class="container">
-        <p class="text-center">Vízszíntes navigátor bár</p>
+        <p class="text-center">Bandák</p>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container">
-              <a class="navbar-brand" href="index.html"><img src="kezilabda_2.jpg" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
+              <a class="navbar-brand" href="index.html"><img src="Képek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                  <li class="nav-item">s
+                  <li class="nav-item">
                     <a class="nav-link" href="Mark.html">Metallica</a>
                   </li>
                   <li class="nav-item">
