--- a/Projekt3/Levi.html
+++ b/Projekt3/Levi.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="Css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <div id="cont" class="container">
         <p class="text-center">Bandák</p>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container">
@@ -33,6 +33,14 @@
               </div>
             </div>          
           </nav>
+          <br>
+          <div class="row">
+            <h1>KISS Története</h1>
+            <hr>
+            <h3><strong> Elözmények (1970-1972)</strong></h3>
+            <p>Az együttes alapítói, Paul Stanley (Stanley Bert Eisen néven, New Yorkban született) és Gene Simmons (Chaim Witz néven született Izraelben, szülei magyar zsidók, Simmons jól beszél is magyarul) már az 1960-as évek végén megfordultak különböző zenekarokban. Stanley Uncle Joe néven alapított triót, amelyben Matt Rael gitárossal és Neil Teeman dobossal zenélt. 15 évesen a Postwar Baby Boom zenekarhoz csatlakozott, majd a Three nevű zenekarba szállt be. Ebben a rövid életű formációban Steve Coronel gitáros és Marty Cohen basszusgitáros mellett már együtt zenélt Gene Simmonsszal. Simmons korábban a Long Island Sounds zenekarban fordult meg, amely később The Love Bag néven szerepelt. A Three feloszlása után Simmons egy Cathedral nevű zenekart alapított meg, ez azonban néhány fellépést követően feloszlott. Simmons egy Brook Ostrader nevű szintetizátoros segítségével készített egy demót, amelyet a kiadók visszautasítottak. Ezt követően a The Village Voiceban adott fel egy hirdetést, amelyre az akkor már a legjobb barátjának számító Paul Stanley is válaszolt. Simmons ekkoriban még tanárként, míg Stanley taxisofőrként dolgozott, hogy megteremthessék az együttesük elindításához szükséges anyagi keretet.</p>
+
+          </div>
 
 
     </div>
