--- a/Projekt3/Mark.html
+++ b/Projekt3/Mark.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="Css/styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Mark.css">
     <title>Document</title>
 </head>
 <body>
     <div id="cont" class="container">
-        <p class="text-center">Vízszíntes navigátor bár</p>
+        <h1 class="text-center">Metallica</h1>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container">
               <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
@@ -34,10 +35,10 @@
             </div>          
           </nav>
           <div class="row">
-            <p>A Metallica amerikai heavy metal zenekart James Hetfield és Lars Ulrich alapította 1981-ben Los Angelesben. Az utóbbi évtizedek egyik legsikeresebb együttese, az 1980-as és az 1990-es évek meghatározó zenekara. Első stabil felállása – Lars Ulrich dobos, James Hetfield énekes-gitáros, Cliff Burton basszusgitáros és Kirk Hammett gitáros – 1983-ra alakult ki. Az 1983-ban megjelent Kill ’Em All című első albumuk újszerű, agresszív stílusával lefektették a heavy metal alapjait.[2][3][4] Az 1984-ben, illetve 1986-ban megjelent Ride the Lightning és Master of Puppets albumaikon lassabb, epikus hangvételű, összetettebb dalokkal bővítették zenéjüket. Az egyre népszerűbb zenekar 1986-os turnéján Cliff Burton közlekedési balesetben meghalt. A helyére került Jason Newsteddel felvett …And Justice for All tovább növelte népszerűségüket, és a „thrash metal nagy négyese” (Metallica, Megadeth, Slayer, Anthrax) közül ők lettek a legismertebbek.</p>
+            <p>A Metallica amerikai heavy metal zenekart James Hetfield és Lars Ulrich alapította 1981-ben Los Angelesben. Az utóbbi évtizedek egyik legsikeresebb együttese, az 1980-as és az 1990-es évek meghatározó zenekara. Első stabil felállása – Lars Ulrich dobos, James Hetfield énekes-gitáros, Cliff Burton basszusgitáros és Kirk Hammett gitáros – 1983-ra alakult ki. Az 1983-ban megjelent Kill ’Em All című első albumuk újszerű, agresszív stílusával lefektették a heavy metal alapjait. Az 1984-ben, illetve 1986-ban megjelent Ride the Lightning és Master of Puppets albumaikon lassabb, epikus hangvételű, összetettebb dalokkal bővítették zenéjüket. Az egyre népszerűbb zenekar 1986-os turnéján Cliff Burton közlekedési balesetben meghalt. A helyére került Jason Newsteddel felvett …And Justice for All tovább növelte népszerűségüket, és a „thrash metal nagy négyese” (Metallica, Megadeth, Slayer, Anthrax) közül ők lettek a legismertebbek.</p>
           </div>
           <div class="row">
-            <img src="Képek/metallica.png" alt="">
+            <img id="kep" src="Kepek/metallica.png" alt="">
           </div>
 
     </div>
