--- a/Projekt3/Mark.html
+++ b/Projekt3/Mark.html
@@ -38,7 +38,9 @@
             <p>A Metallica amerikai heavy metal zenekart James Hetfield és Lars Ulrich alapította 1981-ben Los Angelesben. Az utóbbi évtizedek egyik legsikeresebb együttese, az 1980-as és az 1990-es évek meghatározó zenekara. Első stabil felállása – Lars Ulrich dobos, James Hetfield énekes-gitáros, Cliff Burton basszusgitáros és Kirk Hammett gitáros – 1983-ra alakult ki. Az 1983-ban megjelent Kill ’Em All című első albumuk újszerű, agresszív stílusával lefektették a heavy metal alapjait. Az 1984-ben, illetve 1986-ban megjelent Ride the Lightning és Master of Puppets albumaikon lassabb, epikus hangvételű, összetettebb dalokkal bővítették zenéjüket. Az egyre népszerűbb zenekar 1986-os turnéján Cliff Burton közlekedési balesetben meghalt. A helyére került Jason Newsteddel felvett …And Justice for All tovább növelte népszerűségüket, és a „thrash metal nagy négyese” (Metallica, Megadeth, Slayer, Anthrax) közül ők lettek a legismertebbek.</p>
           </div>
           <div class="row">
-            <img id="kep" src="Kepek/metallica.png" alt="">
+            <p class="text-center">
+              <img id="kep" src="Kepek/metallica.png" alt="">
+            </p>
           </div>
 
     </div>
