--- a/Projekt3/Index.html
+++ b/Projekt3/Index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="slideshow.css">
     <title>Document</title>
 </head>
 <body>
@@ -33,6 +34,63 @@
               </div>
             </div>          
           </nav>
+          <br>
+          <div class="slideshow-container">
+
+            <div class="mySlides fade">
+              <div class="numbertext">1 / 3</div>
+              <img id="sld" src="Kepek/metallica.png" style="width:100%">
+              <div class="text"></div>
+            </div>
+  
+            <div class="mySlides fade">
+              <div class="numbertext">2 / 3</div>
+              <img id="sld" src="Kepek/acdc.png" style="width:100%">
+              <div class="text"></div>
+            </div>
+  
+            <div class="mySlides fade">
+              <div class="numbertext">3 / 3</div>
+              <img id="sld" src="Kepek/metallica.png" style="width:100%">
+              <div class="text"></div>
+            </div>
+  
+            <div class="col-3">
+  
+            </div>
+  
+          </div>
+          <br>
+  
+          <div style="text-align:center">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+          </div>
+  
+          <script>
+            let slideIndex = 0;
+            showSlides();
+  
+            function showSlides() {
+              let i;
+              let slides = document.getElementsByClassName("mySlides");
+              let dots = document.getElementsByClassName("dot");
+              for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+              }
+              slideIndex++;
+              if (slideIndex > slides.length) { slideIndex = 1 }
+              for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+              }
+              slides[slideIndex - 1].style.display = "block";
+              dots[slideIndex - 1].className += " active";
+              setTimeout(showSlides, 2500);
+            }
+          </script>
+
+
 
 
     </div>
