--- a/Projekt3/Mark.html
+++ b/Projekt3/Mark.html
@@ -72,13 +72,36 @@
     </div>
     <div class="row">
       <div class="col-6">
-      <img id="kep2" src="Kepek/banda.jpg" alt="">
+        <img id="kep2" src="Kepek/banda.jpg" alt="">
+      </div>
+      <div class="col-6">
+        <h1><u>Bandatagok</u></h1>
+        <ul>
+          <li>
+            <h5> James Alen Hetfield </h5>
+          </li>
+          <li>
+            <h5>Lars Ulrich</h5>
+          </li>
+          <li>
+            <h5>Kirk Hammett</h5>
+          </li>
+          <li>
+            <h5>Robert Trujillo</h5>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="col-6">
-      <ul>
-        <li></li>
-      </ul>
+    <br>
+    <div class="row">
+      <h1><u>Története</u></h1>
+      <p>A Metallicát 1981-ben alapította a dán származású Lars Ulrich dobos és az énekes-gitáros James Hetfield Los Angelesben. Ulrich újsághirdetést adott fel, miszerint „egy dobos zenészeket keres Tygers of Pan Tang, Diamond Head és Iron Maiden dalok eljátszásához”, erre James Hetfield és Hugh Tanner válaszolt. Az Aerosmith-fanatikus Hetfield korábban olyan amatőr együttesekben fordult meg, mint az Obsession, a Phantom Lord és a Leather Charm. A zenekart hivatalosan 1981 októberében alapították, öt hónappal azután, hogy Ulrich először találkozott Hetfielddel. A „Metallica” nevet egy barát, Ron Quintana javasolta, aki azon gondolkozott, hogy milyen néven indítsa el heavy metal magazinját. Egyik ötlete a Metallica volt. Ulrich Quintanának a Metal Mania nevet javasolta, így magának megtartotta a Metallicát.</p>
     </div>
+    <div class="row"> 
+      <p>1982 elején vették fel első saját dalukat, a „Hit the Lights”-ot, az első Metal Massacre válogatáshoz. A dal címét a Diamond Head együttes „Shoot the Lights” dala inspirálta. Brian Slagel (a későbbi Metal Blade kiadó tulajdonosa) válogatásalbumán Ulrich révén szerepelhettek, mivel jó barátja volt a korábban fanzine-szerkesztéssel foglalkozó Slagelnek. A dalban Lloyd Grant volt a szólógitáros, míg a basszusgitáros Ron McGovney lett, aki korábban már játszott együtt Hetfielddel a Leather Charm soraiban. A Metal Massacre 1982. június 14-én jelent meg, ahol tévesen „Mettallica” néven jegyezték fel őket, és olyan zenekarokkal szerepeltek együtt, mint a Cirith Ungol, a Ratt, a Steeler, az Avatar (a későbbi Savatage) és a Malice. A kiadványon Grant és McGovney neve is tévesen szerepelt, mint Mcgouney és Llyod. Mivel szükség volt egy állandó gitárosra, a The Recyclerben egy újsághirdetést adtak fel, amire Dave Mustaine, a Panic zenekar gitárosa jelentkezett. Az együttes első, 1982. március 14-én adott koncertjén (Anaheim – Kalifornia Radio City klub) már Mustaine gitározott Hetfield oldalán. Az első koncertjeiken Diamond Head, Sweet Savage és Savage dalok is a koncertprogram részét képezték. A Metal Massacre válogatás ezt követően Kanadában is megjelent, melyen a Hit the Lights már újravett verzióban, Mustaine előadásában szerepelt. Az első próbatermi felvételek 1982-ben készültek McGovney garázsában, melyből a Ron McGovney's '82 Garage demó született, rajta öt Diamond Head-, egy Sweet Savage- és egy Savage-feldolgozással, valamint két saját számmal („Hit the Lights”, „Jump in the Fire”).</p>
+    </div>
+    <div class="row text-center">
+      <img id="banda" src="Kepek/metallica2.jpg" alt="">
     </div>
 
   </div>
