--- a/Projekt3/Gyuri.html
+++ b/Projekt3/Gyuri.html
@@ -1,40 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="Gyuri.css">
+  <title>Document</title>
 </head>
+
 <body>
-    <div id="cont" class="container">
-        <p class="text-center">Bandák</p>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <div class="container">
-              <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Metallica</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">KISS</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Gyuri.html">AC/DC</a>
-                  </li>           
-                </ul>
-              </div>
-            </div>          
-          </nav>
-
-
+  <div id="cont" class="container">
+    <h1 class="text-center">AC/DC</h1>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;"
+            class="rounded-pill"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="Mark.html">Metallica</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Levi.html">KISS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Gyuri.html">AC/DC</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="row">
+      <h2>Bevezető</h2>
     </div>
+    <div class="row">
+      <p>Az AC/DC ausztrál hard rock zenekart Malcolm és Angus Young testvérek alapították 1973 decemberében,
+        Sydney-ben. Nevük jelentése: váltóáram/egyenáram (az angol alternating current/direct current rövidítése). Az
+        együttes a rock zenei műfaj úttörője, kiemelkedő csapata. <a href="Gyuri2.html">Történetük bővebben</a> </p>
+    </div>
+    <br>
+    <div class="row">
+      <h2>Tagjai</h2>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-6">
+      <h4>Jelenlegi tagjai</h4>
+      <ul>
+        <li>Angus Young – szólógitár (1973–napjainkig)</li>
+        <li>Brian Johnson—ének (1980–napjainkig)</li>
+        <li>Phil Rudd – dobok (1975–1983, 1994–2014, 2020–)</li>
+        <li>Stevie Young – ritmusgitár, vokál (1988, 2014–napjainkig)</li>
+        <li>Cliff Williams – basszusgitár, háttérvokál (1977–2016, 2020–)</li>
+      </ul>
+      <img id="ang" src="Kepek/250px-AngusYoung1.jfif" alt="">
+    </div>
+   
+   <div class="col-6">
+      <h4>Korábbi tagok</h4>
+      <ul>
+        <li>Dave Evans – ének (1973–1974)</li>
+        <li>Bon Scott – ének (1974–1980)</li>
+        <li>Larry Van Kriedt – basszusgitár (1973–1974)</li>
+        <li>Neil Smith – basszusgitár (1974)</li>
+        <li>Rob Bailey – basszusgitár (1974–1975)</li>
+        <li>Mark Evans – basszusgitár (1975–1977)</li>
+        <li>Colin Burgess – dobok (1973–1974)</li>
+        <li>Noel Taylor – dobok (1974)</li>
+        <li>Peter Clack – dobok (1974–1975)</li>
+        <li>Chris Slade – dobok (1989–1994, 2015-2019)</li>
+        <li>George Young – basszusgitár (1975)</li>
+        <li>Simon Wright – dobok (1983–1989)</li>
+        <li>Malcolm Young – ritmusgitár, háttérvokál (1973–2014) </li>
+      </ul>
+    </div>
+    </div>
+
+
+  </div>
 </body>
+
 </html>
