--- a/Projekt3/Gyuri.html
+++ b/Projekt3/Gyuri.html
@@ -82,6 +82,43 @@
       </ul>
     </div>
     </div>
+    <br>
+    <div class="row">
+      <h2>Tagjai</h2>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-6">
+      <h4>Jelenlegi tagjai</h4>
+      <ul>
+        <li>Angus Young – szólógitár (1973–napjainkig)</li>
+        <li>Brian Johnson—ének (1980–napjainkig)</li>
+        <li>Phil Rudd – dobok (1975–1983, 1994–2014, 2020–)</li>
+        <li>Stevie Young – ritmusgitár, vokál (1988, 2014–napjainkig)</li>
+        <li>Cliff Williams – basszusgitár, háttérvokál (1977–2016, 2020–)</li>
+      </ul>
+  
+    </div>
+   
+   <div class="col-6">
+      <h4>Korábbi tagok</h4>
+      <ul>
+        <li>Dave Evans – ének (1973–1974)</li>
+        <li>Bon Scott – ének (1974–1980)</li>
+        <li>Larry Van Kriedt – basszusgitár (1973–1974)</li>
+        <li>Neil Smith – basszusgitár (1974)</li>
+        <li>Rob Bailey – basszusgitár (1974–1975)</li>
+        <li>Mark Evans – basszusgitár (1975–1977)</li>
+        <li>Colin Burgess – dobok (1973–1974)</li>
+        <li>Noel Taylor – dobok (1974)</li>
+        <li>Peter Clack – dobok (1974–1975)</li>
+        <li>Chris Slade – dobok (1989–1994, 2015-2019)</li>
+        <li>George Young – basszusgitár (1975)</li>
+        <li>Simon Wright – dobok (1983–1989)</li>
+        <li>Malcolm Young – ritmusgitár, háttérvokál (1973–2014) </li>
+      </ul>
+    </div>
+    </div>
 
 
   </div>
