--- a/Projekt3/Gyuri.html
+++ b/Projekt3/Gyuri.html
@@ -84,39 +84,42 @@
     </div>
     <br>
     <div class="row">
-      <h2>Tagjai</h2>
+      <h2>Diszkográfia</h2>
     </div>
     <br>
     <div class="row">
       <div class="col-6">
-      <h4>Jelenlegi tagjai</h4>
+      <h4>Brian Johnson-éra</h4>
       <ul>
-        <li>Angus Young – szólógitár (1973–napjainkig)</li>
-        <li>Brian Johnson—ének (1980–napjainkig)</li>
-        <li>Phil Rudd – dobok (1975–1983, 1994–2014, 2020–)</li>
-        <li>Stevie Young – ritmusgitár, vokál (1988, 2014–napjainkig)</li>
-        <li>Cliff Williams – basszusgitár, háttérvokál (1977–2016, 2020–)</li>
+        <li>Back in Black (1980)</li>
+        <li>For Those About to Rock (1981)</li>
+        <li>Flick of the Switch (1983)</li>
+        <li>Fly on the Wall (1985)</li>
+        <li>Blow Up Your Video (1988)</li>
+        <li>The Razors Edge (1990)</li>
+        <li>Live (1992) ‑ koncertalbum</li>
+        <li>Ballbreaker (1995)</li>
+        <li>Stiff Upper Lip (2000))</li>
+        <li>Black Ice (2008)</li>
+        <li>Rock or Bust (2014)</li>
+        <li>Power Up (2020)</li>
       </ul>
   
     </div>
    
    <div class="col-6">
-      <h4>Korábbi tagok</h4>
+      <h4> Bon Scott-éra</h4>
       <ul>
-        <li>Dave Evans – ének (1973–1974)</li>
-        <li>Bon Scott – ének (1974–1980)</li>
-        <li>Larry Van Kriedt – basszusgitár (1973–1974)</li>
-        <li>Neil Smith – basszusgitár (1974)</li>
-        <li>Rob Bailey – basszusgitár (1974–1975)</li>
-        <li>Mark Evans – basszusgitár (1975–1977)</li>
-        <li>Colin Burgess – dobok (1973–1974)</li>
-        <li>Noel Taylor – dobok (1974)</li>
-        <li>Peter Clack – dobok (1974–1975)</li>
-        <li>Chris Slade – dobok (1989–1994, 2015-2019)</li>
-        <li>George Young – basszusgitár (1975)</li>
-        <li>Simon Wright – dobok (1983–1989)</li>
-        <li>Malcolm Young – ritmusgitár, háttérvokál (1973–2014) </li>
-      </ul>
+        <li>High Voltage (1975)</li>
+        <li>T.N.T. (1975)</li>
+        <li>Dirty Deeds Done Dirt Cheap (1976)</li>
+        <li>Let There Be Rock (1977)</li>
+        <li>Powerage (1978)</li>
+        <li>If You Want Blood (1978) ‑ koncertalbum</li>
+        <li>Highway to Hell (1979</li>
+        <li>Bonfire (1997) ‑ box set</li>
+          </ul>
+          <p class="text-center"> <img src="Kepek/acdc-nobackg.png" alt=""></p>
     </div>
     </div>
 
