--- a/Projekt3/Gyuri.html
+++ b/Projekt3/Gyuri.html
@@ -52,13 +52,14 @@
     <br>
     <div class="row">
       <div class="col-6">
-      <h4>Jelenlegi tagjai</h4>
+      <h4>Jelenlegi tagjai </h4> 
       <ul>
         <li>Angus Young – szólógitár (1973–napjainkig)</li>
         <li>Brian Johnson—ének (1980–napjainkig)</li>
         <li>Phil Rudd – dobok (1975–1983, 1994–2014, 2020–)</li>
         <li>Stevie Young – ritmusgitár, vokál (1988, 2014–napjainkig)</li>
         <li>Cliff Williams – basszusgitár, háttérvokál (1977–2016, 2020–)</li>
+        <li>  <a href="Gyuri3.html">Részletesebb információk</a> </li>
       </ul>
       <img id="ang" src="Kepek/250px-AngusYoung1.jfif" alt="">
     </div>
@@ -82,6 +83,8 @@
       </ul>
     </div>
     </div>
+    <br>
+    <br>
     <br>
     <div class="row">
       <h2>Diszkográfia</h2>
