--- a/Projekt3/Levi4.html
+++ b/Projekt3/Levi4.html
@@ -7,11 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Levi.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <p class="text-center">Bandák</p>
+    <div id="cont" class="container">
+      <h1 class="text-center">KISS</h1>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container">
               <a class="navbar-brand" href="index.html"><img src="Képek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
