--- a/Projekt3/Mark2.html
+++ b/Projekt3/Mark2.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div id="cont" class="container">
+  <div id="cont" class="container text-center">
     <h1 class="text-center">Bandatagok</h1>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="container">
@@ -39,18 +39,18 @@
     </nav>
     <br>
 
-    <div>
-      <div class="card"  style="width:350px">
+    <div class="row">
+      <div class="col-6">
+      <div class="card" style="width:350px">
         <img src="Kepek/James_Hetfield.jpg" alt="Card image">
         <div class="card-body">
           <h2 class="card-title">James Hetfield</h2>
           <p class="card-text">gitáros, énekes</p>
         </div>
       </div>
-    </div>
-<br>
-    <div>
-      <div class="card"  style="width:350px">
+      </div>
+    <div class="col-6">
+      <div class="card" style="width:350px">
         <img src="Kepek/lars_ulrich.jpg" alt="Card image">
         <div class="card-body">
           <h2 class="card-title">Lars Ulrich</h2>
@@ -58,16 +58,32 @@
         </div>
       </div>
     </div>
+    </div>
+    
     <br>
-    <div>
-      <div class="card"  style="width:350px">
+    <div class="row">
+      <div class="col-6">
+      <div class="card" style="width:350px">
         <img src="Kepek/kirk_hammet.jpg" alt="Card image">
         <div class="card-body">
           <h2 class="card-title">Kirk Hammett</h2>
           <p class="card-text">szológitáros</p>
         </div>
       </div>
+      </div>
+  <div class="col-6">
+      <div class="card" style="width:350px">
+        <img src="Kepek/Robert_Trujillo.jpg" alt="Card image">
+        <div class="card-body">
+          <h2 class="card-title">Robert Trujillo</h2>
+          <p class="card-text">basszusgitáros</p>
+        </div>
+      </div>
     </div>
+    </div>
+   
+    
+
 
   </div>
 </body>
